; ModuleID = '/home/carl/AnghaBench/reactos/base/services/nfsd/extr_util.c_safe_read.c'
source_filename = "/home/carl/AnghaBench/reactos/base/services/nfsd/extr_util.c_safe_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERROR_BUFFER_OVERFLOW = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @safe_read(i8** %0, i64* %1, i8* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8**, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  store i8** %0, i8*** %6, align 8
  store i64* %1, i64** %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  %10 = load i64*, i64** %7, align 8
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* %9, align 8
  %13 = icmp slt i64 %11, %12
  br i1 %13, label %14, label %16

14:                                               ; preds = %4
  %15 = load i32, i32* @ERROR_BUFFER_OVERFLOW, align 4
  store i32 %15, i32* %5, align 4
  br label %30

16:                                               ; preds = %4
  %17 = load i8*, i8** %8, align 8
  %18 = load i8**, i8*** %6, align 8
  %19 = load i8*, i8** %18, align 8
  %20 = load i64, i64* %9, align 8
  %21 = call i32 @CopyMemory(i8* %17, i8* %19, i64 %20)
  %22 = load i64, i64* %9, align 8
  %23 = load i8**, i8*** %6, align 8
  %24 = load i8*, i8** %23, align 8
  %25 = getelementptr inbounds i8, i8* %24, i64 %22
  store i8* %25, i8** %23, align 8
  %26 = load i64, i64* %9, align 8
  %27 = load i64*, i64** %7, align 8
  %28 = load i64, i64* %27, align 8
  %29 = sub nsw i64 %28, %26
  store i64 %29, i64* %27, align 8
  store i32 0, i32* %5, align 4
  br label %30

30:                                               ; preds = %16, %14
  %31 = load i32, i32* %5, align 4
  ret i32 %31
}

declare dso_local i32 @CopyMemory(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
